--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,9 +25,22 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build_1.0.1
+          path:
+            dist
+            package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build_1.0.1
+      - name: print files
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
