--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,9 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build_1.0.1
-          path:
-            dist
-            package.json
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
