--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: output file name
         id: publish
-        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OTPUT ';'
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: upload artifact
         uses: actions/upload-artifact@v4
         with:
