--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
           key: npm-deps-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
-      - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:$port
+      #- name: Run server
+      #  run: npm start & npx wait-on http://127.0.0.1:$port
       - name: Run tests
         run: npm test
       - name: Output information
