--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
         run: npm ci
       #- name: Run server
       #  run: npm start & npx wait-on http://127.0.0.1:$port
-      - name: Run tests
-        run: npm test
+      #- name: Run tests
+      #  run: npm test
       - name: Output information
         run: echo "..."
       - name: print env value
